--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["bnanan", "laravel", "graphql"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
         "bnanan/lighthouse-monkey": "^0.0.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
