#2 #4 Added WCA 3rd party authentication

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+WCA_CLIENT_ID=
+WCA_CLIENT_SECRET=
+WCA_REDIRECT=
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
