:sparkles: #14 #15 #16 Upgraded to PHP 8.1 and added PHP Enum support

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -13,3 +13,5 @@ parameters:
         - ./*/*/FileToBeExcluded.php
 
     checkMissingIterableValueType: false
+    ignoreErrors:
+            - '#^Access to( an)? undefined (constant|property) (App\\Enums(\\\w+)+|UnitEnum)::\$?\w+\.$#'
