--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,12 @@ jobs:
           DB_PASSWORD: secret
           DB_PORT: ${{ job.services.mysql.ports[3306] }}
         run: phpdbg -qrr vendor/bin/phpunit --testdox -d memory_limit=512M --coverage-clover clover.xml
+
+      - name: Upload coverage to Codecov.io
+        shell: bash
+        run: bash <(curl -s https://codecov.io/bash) -t ${CODECOV_TOKEN} -f ${GITHUB_WORKSPACE}/clover.xml -C ${GITHUB_SHA}
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
   phpstan:
     name: Run Static Code Analysis
     runs-on: ubuntu-latest
