--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-install-cmd": [
+            "cp -rp .githooks/* '.git/hooks' && chmod +x .git/hooks/*"
         ]
     },
     "extra": {
