--- a/phpstan.neon
+++ b/phpstan.neon
@@ -14,4 +14,4 @@ parameters:
 
     checkMissingIterableValueType: false
     ignoreErrors:
-            - '#^Access to( an)? undefined (constant|property) (App\\Enums(\\\w+)+|UnitEnum)::\$?\w+\.$#'
+            - '#^Access to( an)? undefined (constant|property) (App\\[\\\\\w+]+\\Enums(\\\w+)+|UnitEnum)::\$?\w+\.$#'
