:arrow_up: Migrated to Laravel 9.0 and Larastan 2.0 (#30)

--- a/composer.json
+++ b/composer.json
@@ -7,24 +7,23 @@
     "require": {
         "php": "^8.0",
         "aws/aws-sdk-php": "^3.209",
-        "bnanan/lighthouse-monkey": "^0.0.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.65",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "mll-lab/laravel-graphql-playground": "^2.5",
-        "nuwave/lighthouse": "^5.24"
+        "nuwave/lighthouse": "^5.40"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.9.1",
         "jetbrains/phpstorm-attributes": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
-        "nunomaduro/larastan": "^1.0",
+        "nunomaduro/collision": "^6.1",
+        "nunomaduro/larastan": "^2.0",
         "phpunit/phpunit": "^9.5.10"
     },
     "autoload": {
