--- a/phpstan.neon
+++ b/phpstan.neon
@@ -15,3 +15,4 @@ parameters:
     checkMissingIterableValueType: false
     ignoreErrors:
             - '/^Parameter #\d \$b of method App\\[\\\w+:\(\)]+ expects App\\[\\\w+]+(\\\w+), App\\[\\\w+]+Cast given.$/'
+            - '/^Access to an undefined property App\\Services\\Finances\\Casts\\MoneyBagCast::.+$/'
