--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "mll-lab/laravel-graphql-playground": "^2.5",
-        "nuwave/lighthouse": "^5.40"
+        "nuwave/lighthouse": "^5.40",
+        "stripe/stripe-php": "^7.125"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^1.0",
